@@ -1,5 +1,6 @@
 Changelog for Shake
 
+    Add Sys module for writing consise system calls
     Add getEnv function
     Add shakeWithArgs and shakeOptDescrs
     Add newCache to cache the parsed contents of files
